--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -17,18 +17,18 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: '-rltgoDzvO --delete'
-          SOURCE: 'home'
+          SOURCE: 'home/'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/home
 
       - name: Deploy home to Server
         uses: easingthemes/ssh-deploy@v2.1.2
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: '-rltgoDzvO --delete'
-          SOURCE: 'dist/home'
+          SOURCE: 'dist/home/'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/dist
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/dist/home
   
