--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,7 +33,7 @@ jobs:
         run: ssh-keyscan ${{ secrets.SERVER_HOST_NAME }} >> ~/.ssh/known_hosts
 
       - name: Run SSH Command To build nodejs server
-        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(docker stop tianlad-nodejs || true) && (docker rm tianlad-nodejs || true) && (docker rmi tianlad-nodejs || true) && cd /fay/service/tianlad/nodejs/ && docker build -t tianlad-nodejs . && docker run --restart=always -d -p 3003:3000 -v /fay/service/tianlad/public:/app/public --name tianlad-nodejs tianlad-nodejs"
+        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(docker stop tianlad-nodejs || true) && (docker rm tianlad-nodejs || true) && (docker rmi tianlad-nodejs || true) && cd ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs && docker build -t tianlad-nodejs . && docker run --restart=always -d -p 3003:3000 -v ${{ secrets.SERVER_SERVICE_TARGET }}/public:/app/public --name tianlad-nodejs tianlad-nodejs"
       
 
   
