--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@octokit/core": "^3.1.0",
     "archiver": "^4.0.1",
+    "dotenv": "^8.2.0",
     "koa": "^2.12.1",
     "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
