--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,7 +32,10 @@ jobs:
       - name: Setup knownhosts
         run: ssh-keyscan ${{ secrets.SERVER_HOST_NAME }} >> ~/.ssh/known_hosts
 
-      - name: Run SSH Command To build nodejs server
+      - name: Run SSH Command To Setup Environment
+        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "cd ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs && echo -e ${{ secrets.SERVER_NODE_ENV }} > .env"
+      
+        - name: Run SSH Command To build nodejs server
         run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(docker stop tianlad-nodejs || true) && (docker rm tianlad-nodejs || true) && (docker rmi tianlad-nodejs || true) && cd ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs && docker build -t tianlad-nodejs . && docker run --restart=always -d -p 3003:3000 -v ${{ secrets.SERVER_SERVICE_TARGET }}/public:/app/public --name tianlad-nodejs tianlad-nodejs"
       
 
