--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -23,7 +23,7 @@ jobs:
         run: ssh-keyscan ${{ secrets.SERVER_HOST_NAME }} >> ~/.ssh/known_hosts
 
       - name: Run SSH Command To init directory
-        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(mkdir ${{ secrets.SERVER_SERVICE_TARGET }}/public || true) && (mkdir ${{ secrets.SERVER_SERVICE_TARGET }}/public/dist || true)"
+        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(mkdir ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public || true) && (mkdir ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public/dist || true)"
 
       - name: Deploy mobile to Server
         uses: easingthemes/ssh-deploy@v2.1.2
@@ -33,7 +33,7 @@ jobs:
           SOURCE: 'dist/index.html'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/dist
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public/dist
 
       - name: Deploy mobile to Server
         uses: easingthemes/ssh-deploy@v2.1.2
@@ -43,7 +43,7 @@ jobs:
           SOURCE: 'm/'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/m
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public/m
 
       - name: Deploy mobile dist to Server
         uses: easingthemes/ssh-deploy@v2.1.2
@@ -53,5 +53,5 @@ jobs:
           SOURCE: 'dist/m/'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/public/dist/m
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public/dist/m
   
