--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
           SOURCE: 'nodejs/'
           REMOTE_HOST: ${{ secrets.SERVER_HOST_NAME }}
           REMOTE_USER: ${{ secrets.SERVER_USER_NAME }}
-          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs
+          TARGET: ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/nodejs
 
       - name: ssh-agent
         uses: webfactory/ssh-agent@v0.1.1
@@ -33,10 +33,10 @@ jobs:
         run: ssh-keyscan ${{ secrets.SERVER_HOST_NAME }} >> ~/.ssh/known_hosts
 
       - name: Run SSH Command To Setup Environment
-        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "cd ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs && echo -e ${{ secrets.SERVER_NODE_ENV }} > .env"
-              
+        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "cd ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/nodejs && echo -e ${{ secrets.SERVER_NODE_ENV }} > .env"
+
       - name: Run SSH Command To build nodejs server
-        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(docker stop tianlad-nodejs || true) && (docker rm tianlad-nodejs || true) && (docker rmi tianlad-nodejs || true) && cd ${{ secrets.SERVER_SERVICE_TARGET }}/nodejs && docker build -t tianlad-nodejs . && docker run --restart=always -d -p 3003:3000 -v ${{ secrets.SERVER_SERVICE_TARGET }}/public:/app/public --name tianlad-nodejs tianlad-nodejs"
+        run: ssh root@${{ secrets.SERVER_HOST_NAME }} "(docker stop tianlad-nodejs || true) && (docker rm tianlad-nodejs || true) && (docker rmi tianlad-nodejs || true) && cd ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/nodejs && docker build -t tianlad-nodejs . && docker run --restart=always -d -p 3003:3000 -v ${{ secrets.SERVER_SERVICE_TARGET }}/tianlad/public:/app/public --name tianlad-nodejs tianlad-nodejs"
       
 
   
